<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/grey"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/ibtn_back_tanyaahli"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:background="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_hitam" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:text="@string/tanyaahli"
        android:textStyle="bold"
        android:textColor="@color/dark_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chat" />

    <SearchView
        android:id="@+id/searchView2"
        android:background="@color/white"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:text="@string/pakar_pertanian"
        android:textColor="@color/dark_green"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/searchView2"
        app:layout_constraintTop_toBottomOf="@+id/searchView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/lihat_semua"
        app:layout_constraintEnd_toEndOf="@+id/searchView2"
        app:layout_constraintTop_toBottomOf="@+id/searchView2" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="375dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/latar_tanya_ahli" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:background="@color/white"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton6"
        app:layout_constraintStart_toStartOf="@+id/imageButton6"
        app:layout_constraintTop_toTopOf="@+id/imageButton6"
        app:srcCompat="@drawable/profil_tanya_ahli" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/ahli0"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/dark_green"
        app:layout_constraintStart_toEndOf="@+id/imageButton8"
        app:layout_constraintTop_toTopOf="@+id/imageButton6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/isi"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/ibtn_tanyaahli_rincian"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@color/white"
        android:scaleType="centerCrop"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton6"
        app:layout_constraintEnd_toEndOf="@+id/imageButton6"
        app:layout_constraintTop_toTopOf="@+id/imageButton6"
        app:srcCompat="@drawable/btn_tanya_ahli" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="12dp"
        android:layout_height="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="5dp"
        android:background="@color/grey"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/searchView2"
        app:srcCompat="@drawable/rincian_ahli" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="375dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6"
        app:srcCompat="@drawable/latar_tanya_ahli" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@color/white"
        android:scaleType="centerCrop"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
        app:layout_constraintStart_toStartOf="@+id/imageButton3"
        app:layout_constraintTop_toTopOf="@+id/imageButton3"
        app:srcCompat="@drawable/profil_tanya_ahli" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/nama"
        android:textColor="@color/dark_green"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageButton9"
        app:layout_constraintTop_toTopOf="@+id/imageButton3" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/isi"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="25dp"
        android:background="@color/white"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
        app:layout_constraintTop_toTopOf="@+id/imageButton3"
        app:srcCompat="@drawable/btn_tanya_ahli" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:text="@string/apa_kata"
        android:textColor="@color/dark_green"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textVie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="284dp"
        android:text="@string/lihat_semua"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageButton
        android:id="@+id/imageButto"
        android:layout_width="12dp"
        android:layout_height="15dp"
        android:layout_marginTop="288dp"
        android:background="@color/grey"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/imageButton10"
        app:layout_constraintTop_toBottomOf="@+id/imageButton10"
        app:srcCompat="@drawable/rincian_ahli" />

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="370dp"
        android:layout_height="150dp"
        android:layout_marginTop="70dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
        app:layout_constraintStart_toStartOf="@+id/imageButton3"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        app:srcCompat="@drawable/apa_kata_ahli" />

</android.support.constraint.ConstraintLayout>